--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -10,53 +10,78 @@
 
 
   </head>
-  <body ng-app="Anic">
-    <!--Nav bar-->
-    <div class="">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#"><img src="/img/ku.png" alt="" class="logo_ku"></a>
-          </div>
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-           <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-           <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-         </ul>
+  <body ng-app="mainAnicApp">
+
+    <div class="body_all">
+        <!--Nav bar-->
+        <div class="Navbar_top">
+          <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="#"><img src="/img/ku.png" alt="" class="logo_ku"></a>
+              </div>
+              <ul class="nav navbar-nav">
+                <li><a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+               <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+               <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+             </ul>
+            </div>
+          </nav>
         </div>
-      </nav>
+        <!-- end nav bar -->
+
+        <!-- ################################ navbar-slide + Main_middel ####################################### -->
+        <!-- navbar-slide -->
+        <div id="wrapper" class="toggled">
+
+          <!-- Sidebar -->
+          <div id="Sidebar_wrapper">
+              <ul class="sidebar-nav">
+                  <li class="sidebar-brand">
+                      <a href="#">
+                          ANIC
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#!/">Home</a>
+                  </li>
+                  <li>
+                    <a ui-sref='usavote'>Usa vote</a>
+                  </li>
+                  <li>
+                      <a ui-sref='list_steaming'>List Steaming</a>
+                  </li>
+                  <li>
+                    <a ui-sref='steaming'>Steaming</a>
+                  </li>
+
+              </ul>
+          </div>
+          <!-- endnavbar-slide -->
+          <!-- Main_middel -->
+          <div id="Main_middel" class="Main_middel">
+            <div class="top_for_nav"></div>
+
+            <div ui-view class="main-view"><!-- ส่วน การปรับเปลี่ยนวิวตาม state -->
+              <!--
+              DATA // router
+            -->
+            </div>
+
+          </div>
+          <!--end Main_middel -->
+
+        </div>
+        <!-- end midle -->
+        <!-- ################################ end navbar-slide + Main_middel ####################################### -->
+
+
+
+
     </div>
-    <!-- end nav bar -->
-
-    <!-- midle -->
-    <div class="" ng-controller="MainController">
-
-
-      <div class="top_graph"><!-- เป็นส่วนบนที่แสดงโดยรวม -->
-        <div id="container1" class="map_usa"></div>
-        <canvas id="bar" class=""></canvas>
-      </div>
-
-      <div class=""><!-- เป็นส่วนที่ replac by keyword -->
-        <canvas id="all_area" class="graph_area" ></canvas>
-        <canvas id="chart-area" class="map_usa"></canvas>
-      </div>
-
-
-
-
-
-
-
-    </div>
-    <!-- end midle -->
-
-
+    <!-- end body_all -->
 
 
   </body>
@@ -68,8 +93,26 @@
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/Chart.bundle.js"></script>
   <script src="/js/angular/angular.min.js"></script>
+
+
+  <script src="/modules/core/core.client.module.js"></script><!-- register module ที่จะเข้ามาจัดการ router ตัวแรก  -->
+  <script src="/modules/core/config/core.client.routes.js"></script><!-- model กำหนดแต่ละ state ของ routing -->
+
+  <script src="/js/angular/angular-ui-router.min.js"></script><!-- ตัว routung url สำหรับ single page แทน ของ rounting ที่ติดมากับ angular ตัวนี้ดีกว่า // แล้วก็ ทำงานคนละอย่างกับ routing คนละอย่างกับ nodejs   -->
+
+  <script src="/modules/anic-router/anic-router.client.module.js"></script><!-- register module -->
+  <script src="/modules/anic-router/config/anic-router.client.routes.js"></script><!-- model กำหนดแต่ละ state ของ routing -->
+
+  <script src="/js/moment-with-locales.js" charset="utf-8"></script><!-- เอาไว้เรียงวันที่ -->
   <script src="/js/d3.layout.cloud.js"></script><!-- ไฟล์ layout ของ wordcloud -->
-  <script src="/js/anicApp.js"></script>
+  <script src="/Appication.js"></script><!-- main anugular  -->
   <script src="/js/ExtractData.js"></script><!-- ไฟล์ แปลงข้อมูล จากข้อมูล ดิบไปเป็นข้อมูลที่กราฟนำไปแสดงได้ -->
   <script src="/js/Showdata.js"></script><!-- ไฟล์ แสดงเป็นกราฟต่างๆ  -->
+
+          <script>
+           $("#menu-toggle").click(function(e) {
+               e.preventDefault();
+               $("#wrapper").toggleClass("toggled");
+           });
+           </script>
 </html>
