--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ANIC</title>
 
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
@@ -17,12 +17,12 @@
         <div class="Navbar_top">
           <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
+              <ul class="nav navbar-nav">
+                <li><a href="#menu-toggle" id="menu-toggle"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a></li>
+              </ul>
               <div class="navbar-header">
                 <a class="navbar-brand" href="#"><img src="/img/ku.png" alt="" class="logo_ku"></a>
               </div>
-              <ul class="nav navbar-nav">
-                <li><a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a></li>
-              </ul>
               <ul class="nav navbar-nav navbar-right">
                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -40,8 +40,8 @@
           <div id="Sidebar_wrapper">
               <ul class="sidebar-nav">
                   <li class="sidebar-brand">
-                      <a href="#">
-                          ANIC
+                      <a href="#!/">
+                        <h1>ANIC</h1>
                       </a>
                   </li>
                   <li>
@@ -83,9 +83,10 @@
 
   </body>
   <!-- Js -->
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
-  <script src="http://datamaps.github.io/scripts/datamaps.usa.min.js?v=1"></script>
+  <script src="/js/d3.v3.min.js"></script>
+  <script src="/js/topojson.v1.min.js"></script>
+  <script src="/js/datamaps.usa.min.js"></script>
+
   <script src="/js/jquery-3.1.1.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/Chart.bundle.js"></script>
