--- a/public/modules/view/list_steaming.ejs
+++ b/public/modules/view/list_steaming.ejs
@@ -1,25 +1,44 @@
 <!-- Controller for angular -->
 <div class="" ng-controller="ListSteamingController">
-  <h1>List Steaming</h1>
+  <h1>รายการ Steaming</h1>
 
-  <div class="" ng-repeat="data in list_steaming"><!-- รับข้อมูลจาก controller ตัวแปล $scope.list_steaming มา repeat -->
-    <div class="">
-      <h3>Topic</h3>
-      <a href="#!/steaming?topic={{data.topic}}"><h4>{{data.topic}}</h4></a>
-    </div>
+<form class="form-horizontal">
+    <div class="form-group">
 
-    <div class="">
-      <h3>Status</h3>
-      <h4>N/A</h4>
     </div>
+  </form>
 
-    <div class="">
-      <h3>Last update</h3>
-      <h4>{{data.last_update}}</h4>
-    </div>
-    <br>
-    <hr>
-    <br>
+  <form class="form-inline well center-block">
+    <label for="searchTopic" class="control-label"><h3 class="">ค้นหา topic</h3></label>
+    <input id="searchTopic" type="text" class="form-control" placeholder="คำค้นหา" ng-model="searchTopic.topic">
+  </form>
+
+
+
+  <div class="" ng-repeat="data in list_steaming | filter:searchTopic"><!-- รับข้อมูลจาก controller ตัวแปล $scope.list_steaming มา repeat -->
+
+
+      <form class="form-inline well center-block">
+
+        <div class="form-group">
+          <label for="" class="control-label "><h3 class="">Topic</h3></label>
+          <a href="#!/steaming?topic={{data.topic}}">
+            <button type="button" class="btn btn-default btn-lg">{{data.topic}}</button>
+          </a>
+        </div>
+        <br/>
+        <div class="form-group">
+          <label for=""><h3>Status :</h3></label>
+          <label for=""><h4>N/A</h4></label>
+        </div>
+        <br/>
+        <div class="form-group">
+          <label for=""><h3>Last update : </h3></label>
+          <label for=""><h4>{{data.last_update}}</h4></label>
+        </div>
+
+
+      </form>
 
   </div>
 
