--- a/public/modules/view/steaming.ejs
+++ b/public/modules/view/steaming.ejs
@@ -13,6 +13,9 @@
           <div class="col-md-8" style="float:right;"><!-- freq Map Usa  -->
             <div class="col-md-10">
               <h3>การโหวตแต่ละรัฐ</h3>
+              <!--h5>
+                <div id="total_nokey"></div>
+              </h5-->
               <div id='Datamap_Usa' class='Datamap_Usa'></div>
             </div>
             <div class="col-md-2 graph_scale_div">
@@ -38,7 +41,7 @@
   <!-- Main_graph -->
   <!-- Main_graph -->
   <div class="main_graph">
-    <button id="addDataset" type="button" name="button" ng-click="rexazz()" >Chang</button>
+    <button id="addDataset" type="button" name="button" ng-click="update_data()" >Chang</button>
 
 
     <!-- replace_graphh --><!-- กราฟในแต่ละ keyword  -->
@@ -46,8 +49,8 @@
 
       <!-- graph card ของแต่ละก้อน keyword  -->
       <div class="card-2" ng-repeat="data in raw_datas">
-        <div class="node{{$index}}" >
-          <button type='button' name='button' ng-click="hide_show($index)" class='lable_close'>กด</button>
+        <div class="node{{$index}}">
+          <span class="glyphicon glyphicon-option-horizontal lable_close" aria-hidden="true"  ng-click="hide_show($index)" ></span>
           <div class="keyword_{{$index}} hide_show row">
 
             <h1>{{data.keyword}}</h1>
@@ -56,11 +59,23 @@
               <h3 class="grapg_title">ปริมาณ เชิงบวก เชิงลบ ตามช่วงเวลา</h3>
               <canvas id="Chart{{$index}}_PosNegArea" ng-init="creat_graph(data,$index)"></canvas><!-- กราฟเส้นเทียบ pos neg  -->
             </div>
-            <div class="">
-              <button type="button" name="button" ng-click="chang_type_time('days',$index)">Day</button>
-              <button type="button" name="button" ng-click="chang_type_time('hours',$index)">Hour</button>
-              <button type="button" name="button" ng-click="chang_type_time('mins',$index)">Min</button>
+
+            <div class="col-md-12">
+               <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                 <div class="btn-group" role="group">
+                   <button type="button" class="btn btn-default" ng-click="chang_type_time('days',$index)">Day</button>
+                 </div>
+                 <div class="btn-group" role="group">
+                   <button type="button" class="btn btn-default" ng-click="chang_type_time('hours',$index)">Hour</button>
+                 </div>
+                 <div class="btn-group" role="group">
+                   <button type="button" class="btn btn-default" ng-click="chang_type_time('mins',$index)">Min</button>
+                 </div>
+               </div>
             </div>
+
+
+
 
             <div class="col-md-12">
               <h3 class="grapg_title">เชิงบวก เชิงลบ ในแต่ละรัฐ</h3>
