--- a/public/modules/view/usavote.ejs
+++ b/public/modules/view/usavote.ejs
@@ -12,6 +12,9 @@
           </div>
           <div class="col-md-8" style="float:right;"><!-- freq Map Usa  -->
             <div class="col-md-10">
+              <h2>จำนวนการ vote ใน usa <strong id="total_of_usa"></strong><h2>
+              <h2>จำนวนการ vote ที่ไม่ค้นพบ <strong id="total_out_of_usa"></strong><h2>
+
               <h3>การโหวตแต่ละรัฐ</h3>
               <div id='Datamap_Usa' class='Datamap_Usa'></div>
             </div>
