--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -24,8 +24,8 @@
                 <a class="navbar-brand" href="#"><img src="/img/ku.png" alt="" class="logo_ku"></a>
               </div>
               <ul class="nav navbar-nav navbar-right">
-               <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-               <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+               <!--li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+               <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li-->
              </ul>
             </div>
           </nav>
