--- a/public/modules/view/home.ejs
+++ b/public/modules/view/home.ejs
@@ -1,4 +1,14 @@
 <!-- Controller for angular -->
 <div class="" ng-controller="MainController">
-  <h1>Home</h1>
+<div class="card-2">
+  <div class="text_c">
+    <h1>ระบบวิเคราะห์และประมวลผลข้อความบนเครือข่ายสังคมออนไลน์โดยแสดงผลบนเว็บแอพพลิเคชั่น</h1>
+    <h1>(Sentiment Analysis text in social networks on web applications)</h1>
+  </div>
+  <br/>
+  <div class="text_c">
+    <img src="/img/trumpandhilary.jpg" alt="">
+  </div>
+</div>
+
 </div>
