--- a/public/modules/view/list_steaming.ejs
+++ b/public/modules/view/list_steaming.ejs
@@ -1,15 +1,10 @@
 <!-- Controller for angular -->
 <div class="" ng-controller="ListSteamingController">
-  <h1>รายการ Steaming</h1>
 
-<form class="form-horizontal">
-    <div class="form-group">
-
-    </div>
-  </form>
-
-  <form class="form-inline well center-block">
-    <label for="searchTopic" class="control-label"><h3 class="">ค้นหา topic</h3></label>
+  <form class="form-inline card-2">
+    <h1><strong>รายการ หัวข้อเรียลไทม์</strong></h1>
+    <br/>
+    <label for="searchTopic" class="control-label"><h2 class="">ค้นหา หัวข้อ</h2></label>
     <input id="searchTopic" type="text" class="form-control" placeholder="คำค้นหา" ng-model="searchTopic.topic">
   </form>
 
@@ -21,20 +16,25 @@
       <form class="form-inline well center-block">
 
         <div class="form-group">
-          <label for="" class="control-label "><h3 class="">Topic</h3></label>
+          <label for="" class="control-label "><h2 class="">หัวข้อ</h2></label>
           <a href="#!/steaming?topic={{data.topic}}">
-            <button type="button" class="btn btn-default btn-lg">{{data.topic}}</button>
+            <button type="button" class="btn btn-default btn-lg btn_datetime">{{data.topic}}</button>
           </a>
         </div>
         <br/>
         <div class="form-group">
-          <label for=""><h3>Status :</h3></label>
-          <label for=""><h4>N/A</h4></label>
+          <label for=""><h2>สถานะ :</h2></label>
+          <label for=""><h2>{{data.status}}</h2></label>
         </div>
         <br/>
         <div class="form-group">
-          <label for=""><h3>Last update : </h3></label>
-          <label for=""><h4>{{data.last_update}}</h4></label>
+          <label for=""><h2>เริ่มทำการสำรวจ : </h2></label>
+          <label for=""><h2>{{dateThai(data.start_process)}}</h2></label>
+        </div>
+        <br/>
+        <div class="form-group">
+          <label for=""><h2>สำรวจครั้งล่าสุด : </h2></label>
+          <label for=""><h2>{{dateThai(data.last_update)}}</h2></label>
         </div>
 
 
