--- a/public/modules/view/usavote.ejs
+++ b/public/modules/view/usavote.ejs
@@ -3,27 +3,67 @@
 
     <!-- top_graph -->
     <div class="top_graph"><!-- เป็นส่วนบนที่แสดงโดยรวม -->
+
+      <div class="row card-2"><!-- detail -->
+        <div class="">
+          <h1><strong>รายละเอียด</strong></h1>
+        </div>
+        <div class="">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for=""><h2>หัวข้อ :</h2></label>
+              <label for=""><h2>{{topic}}</h2></label>
+            </div>
+            <div class="form-group">
+              <label for=""><h2>สถานะ :</h2></label>
+              <label for=""><h2>{{status}}</h2></label>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for=""><h2>เริ่มทำการสำรวจ : </h2></label>
+              <label for=""><h2>{{start_process}}</h2></label>
+            </div>
+            <div class="form-group">
+              <label for=""><h2>สำรวจครั้งล่าสุด : </h2></label>
+              <label for=""><h2>{{last_update}}</h2></label>
+            </div>
+          </div>
+        </div>
+
+      </div><!-- end detail -->
+
+
         <div class="row card-2">
             <div class="col-md-4">
 
               <div class="Chart_Doughnut"><!-- Dounghnut -->
-                <h1>สัดส่วนคำค้นหาทั้งหมด</h1>
+                <h1><strong>สัดส่วนคำค้นหาทั้งหมด</strong></h1>
                 <canvas id="Chart_Doughnut"></canvas>
               </div>
 
               <div class=""><!-- สรุป % -->
-                <table id="Summary_Chart_Doughnut" class="table table-hover">
+                <table id="Summary_Chart_Doughnut" class="table table-hover scal_table">
                 </table>
+                <div class="">
+                  <h1><strong>สัดส่วนข้อความใน สหรัฐอเมริกา</strong></h1>
+                  <div id="Chart_Gauge"></div>
+                  <div class=""><!-- สรุป %-->
+                    <h2>ปริมาณข้อความทั้งหมด <strong id="total"></strong> ข้อความ<h2>
+                    <h2>ปริมาณข้อความจาก สหรัฐอเมริกา <strong id="total_of_usa"></strong> ข้อความ<h2>
+                    <h2>ปริมาณข้อความที่ไม่ได้อยู่จาก สหรัฐอเมริกา <strong id="total_out_of_usa"> </strong> ข้อความ<h2>
+                  </div>
+                </div>
               </div>
-
             </div>
+
 
             <div class="col-md-8" style="float:right;"><!-- freq Map Usa  -->
               <div class="row">
 
                 <div class="col-md-10">
                   <div class="">
-                    <h1>จำวนวนข้อความในแต่ละรัฐ</h1>
+                    <h1 class="text_center"><strong>จำวนวนข้อความในแต่ละรัฐใน สหรัฐอเมริกา</strong></h1>
                     <div id='Datamap_Usa' class='Datamap_Usa'></div>
                   </div>
 
@@ -33,14 +73,10 @@
                 </div>
               </div>
 
-              <div class="row">
-                <div class="Summary_of_map">
-                  <h3>จำนวนข้อความที่พบใน สหรัฐอเมริกา <strong id="total_of_usa"></strong><h3>
-                  <h3>จำนวนข้อความที่ไม่ได้อยู่ใน สหรัฐอเมริกา <strong id="total_out_of_usa"></strong><h3>
-                </div>
+              <div class="row Summary_of_map">
                 <div class="Tabel_Summary_Datamap_Usa center-block">
-                  <h2>จำนวนข้อความที่พบมากสุดใน 5 รัฐแรก</h2>
-                  <table id="Summary_Datamap_Usa" class="table table-hover">
+                  <h2>จำนวนข้อความที่มากสุดใน 5 รัฐแรก</h2>
+                  <table id="Summary_Datamap_Usa" class="table table-hover scal_table">
                   </table>
                 </div>
               </div>
@@ -79,34 +115,23 @@
 
 
                   <div class="col-md-12">
-                    <h1 class="grapg_title">ปริมาณข้อความ บวก/ลบ ของคำค้น {{data.keyword}} แต่ละช่วงเวลาตั่งแต่ ... ถึง ...</h1>
+                    <h1 class="grapg_title"><strong>ปริมาณข้อความ บวก/ลบ ของคำค้นหา {{data.keyword}} แต่ละวันตั่งแต่ {{start_process}} ถึง {{last_update}} </strong></h1>
 
                     <div class="div_Chart_PosNegArea">
                       <canvas id="Chart{{$index}}_PosNegArea" ng-init="creat_graph(data,$index)"></canvas><!-- กราฟเส้นเทียบ pos neg  -->
                     </div>
                     <div class="col-md-12">
-                      <div class="btn_datetime center-block">
-                        <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                          <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-default" ng-click="chang_type_time('days',$index)"><h5>Day</h5></button>
-                          </div>
-                          <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-default" ng-click="chang_type_time('hours',$index)"><h5>Hour</h5></button>
-                          </div>
-                          <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-default" ng-click="chang_type_time('mins',$index)"><h5>Minute</h5></button>
-                          </div>
-                        </div>
-                      </div>
+
                     </div>
                   </div>
 
 
+                  <br/>
+                  <br/>
+                  <div class="col-md-12">
 
-                  <div class="col-md-12 well center-block">
-
-                    <div class="">
-                      <h1 class="grapg_title">ความถี่ข้อความ บวก/ลบ ของแต่ละรัฐ</h1>
+                    <div class="row">
+                      <h1 class="grapg_title"><strong>ความถี่ข้อความ บวก/ลบ ของแต่ละรัฐ</strong></h1>
 
                       <div class="col-md-10"><!-- กราฟ map เที่ยว pos neg -->
                         <div id="Datamap{{$index}}_PosNeg" class="Datamap_PosNeg"></div>
@@ -119,13 +144,13 @@
 
                     <div class="row">
                       <div class="col-md-6">
-                        <h1>Top 5 pos</h1>
-                        <table id="Summary_Datamap_PosNeg_pos{{$index}}" class="table table-hover">
+                        <h1>สัดส่วนที่มีความรู้สึกเชิงบวกมากสุด</h1>
+                        <table id="Summary_Datamap_PosNeg_pos{{$index}}" class="table table-hover scal_table">
                         </table>
                       </div>
                       <div class="col-md-6">
-                        <h1>Top 5 neg</h1>
-                        <table id="Summary_Datamap_PosNeg_neg{{$index}}" class="table table-hover">
+                        <h1>สัดส่วนที่มีีความรู้สึกเชิงลบมากสุด</h1>
+                        <table id="Summary_Datamap_PosNeg_neg{{$index}}" class="table table-hover scal_table">
                         </table>
                       </div>
                     </div>
@@ -133,17 +158,17 @@
                   </div>
 
                   <div class="col-md-12">
+                    <h1 class="grapg_title"><strong>คำที่กล่าวถึงมากที่สุด</strong></h1>
                     <div class="col-md-12"><!-- world cloud   -->
-                      <div class="col-md-6">
-                        <br>
-                        <br>
-                        <br>
+                      <br>
+                      <div class="center-block" align="center">
                         <div id="Chart{{$index}}_WordCloud" class="Word_Cloud"></div>
                       </div>
-                      <div class="col-md-6">
-                        <h1 class="grapg_title">คำที่กล่าวถึงมากที่สุด</h1>
-                        <table id="Summary_Chart_WordCloud{{$index}}" class="table table-hover">
-                        </table>
+                      <div class=""  align="center">
+                        <div class="Summary_Chart_WordCloud">
+                          <table id="Summary_Chart_WordCloud{{$index}}" class="table table-hover scal_table">
+                          </table>
+                        </div>
                       </div>
                     </div>
                   </div>
